Abre nova janela e aba no diretório corrente

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,8 +61,8 @@ bind-key C-c run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # Rebind split vertical
 unbind %
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # Scroll
 set -s escape-time 50
@@ -74,3 +74,6 @@ setw -g pane-base-index 1
 
 # Sending the previx CTRL + A to other applications
 bind C-a send-prefix
+
+# Custom new pane/window
+bind-key c new-window -c "#{pane_current_path}"
