Binding e removendo comentários

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,6 @@ set -g mouse on
 
 # Active notification
 setw -g monitor-activity on
-#set -g visual-activity on
 
 # default statusbar colors
 set -g status-fg white
@@ -30,9 +29,6 @@ set-window-option -g window-status-attr dim
 set-window-option -g window-status-current-fg colour8
 set-window-option -g window-status-current-bg colour154
 set-window-option -g window-status-current-attr bright
-
-# Highlight active window
-#set-window-option -g window-status-current-bg black
 
 # Command Line
 set -g message-fg white
@@ -77,3 +73,6 @@ bind C-a send-prefix
 
 # Custom new pane/window
 bind-key c new-window -c "#{pane_current_path}"
+
+# Syncronize panes
+bind e setw synchronize-panes
