Updates on tmux conf and adds themes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,9 +10,10 @@ set -g mouse on
 setw -g monitor-activity on
 
 # default statusbar colors
+set -g status-interval 1
 set -g status-fg white
 set -g status-bg black
-set -g status-attr bright
+set -g status-style bright
 
 # Status text
 set -g status-left-length 40
@@ -21,19 +22,18 @@ set -g status-right "#[fg=white]%d %b %R"
 set -g status-justify left
 
 # default window title colors
-set-window-option -g window-status-fg colour241
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=colour241
+set-window-option -g window-status-style bg=default
+set-window-option -g window-status-style dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour8
-set-window-option -g window-status-current-bg colour154
-set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style bg=colour154
+set-window-option -g window-status-current-style bright
 
 # Command Line
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set -g message-style fg=white
+set -g message-style bg=black
+set -g message-style bright
 
 # Vi copypaste mode
 setw -g mode-keys vi
@@ -76,3 +76,6 @@ bind-key c new-window -c "#{pane_current_path}"
 
 # Syncronize panes
 bind e setw synchronize-panes
+
+# themes
+source-file "${HOME}/.tmux-themepack/powerline/block/cyan.tmuxtheme"
