Adds Tmux config start with shortcut

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,7 +62,7 @@ bind - split-window -v -c "#{pane_current_path}"
 
 # Scroll
 set -s escape-time 50
-set -g history-limit 30000
+set -g history-limit 5000
 
 # Setting the window and panes index
 set -g base-index 1
@@ -79,3 +79,6 @@ bind e setw synchronize-panes
 
 # themes
 source-file "${HOME}/.tmux-themepack/powerline/block/cyan.tmuxtheme"
+
+# Start Coding
+bind S source-file ~/.tmux/session1
