--- a/.tmux.conf
+++ b/.tmux.conf
@@ -81,4 +81,4 @@ bind e setw synchronize-panes
 source-file "${HOME}/.tmux-themepack/powerline/block/cyan.tmuxtheme"
 
 # Start Coding
-bind S source-file ~/.tmux/session1
+#bind S source-file ~/.tmux/session1
