--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,7 +78,7 @@ bind-key c new-window -c "#{pane_current_path}"
 bind e setw synchronize-panes
 
 # themes
-source-file "${HOME}/.tmux-themepack/powerline/block/cyan.tmuxtheme"
+source-file "${HOME}/.tmux-themepack/basic.tmuxtheme"
 
 # Start Coding
 #bind S source-file ~/.tmux/session1
