Update some configs and use dracula as theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,6 @@ unbind C-b
 set -g prefix C-a
 set -s escape-time 1
 
-# Mouse integration OFF
-set -g mouse on
-
 # Active notification
 setw -g monitor-activity on
 
@@ -35,14 +32,16 @@ set -g message-style fg=white
 set -g message-style bg=black
 set -g message-style bright
 
-# Vi copypaste mode
+## Use vim keybindings in copy mode
+set-option -g mouse on
 setw -g mode-keys vi
-# Setup 'v' to begin selection as in Vim
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
-# Update default binding of `Enter` to also use copy-pipe
-unbind -T copy-mode Enter
-bind-key -T copy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
+set-option -s set-clipboard off
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X rectangle-toggle
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
@@ -53,8 +52,8 @@ set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # Copy and paste MacOS
-set-option -g default-command "reattach-to-user-namespace -l bash"
-bind-key C-c run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+# set-option -g default-command "reattach-to-user-namespace -l bash"
+# bind-key C-c run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # Rebind split vertical
 unbind %
@@ -79,7 +78,27 @@ bind-key c new-window -c "#{pane_current_path}"
 bind e setw synchronize-panes
 
 # themes
-source-file "${HOME}/.tmux-themepack/basic.tmuxtheme"
+# source-file "${HOME}/.tmux-themepack/basic.tmuxtheme"
 
 # Start Coding
 #bind S source-file ~/.tmux/session1
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+
+# Dracula theme config
+set -g @dracula-show-battery false
+set -g @dracula-show-network false
+set -g @dracula-show-time true
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-powerline true
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
