Increase history and disable tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,7 +62,7 @@ bind - split-window -v -c "#{pane_current_path}"
 
 # Scroll
 set -s escape-time 50
-set -g history-limit 5000
+set -g history-limit 50000
 
 # Setting the window and panes index
 set -g base-index 1
@@ -93,6 +93,7 @@ set -g @dracula-show-network false
 set -g @dracula-show-time true
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-powerline true
+set -g @dracula-show-weather false
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
