--- a/.tmux.conf
+++ b/.tmux.conf
@@ -100,6 +100,7 @@ set -g @dracula-show-weather false
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'dracula/tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
