Add improvements on Tmux and a new plugin for vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,27 +80,24 @@ bind e setw synchronize-panes
 # themes
 # source-file "${HOME}/.tmux-themepack/basic.tmuxtheme"
 
-# Start Coding
-#bind S source-file ~/.tmux/session1
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
 
 # Dracula theme config
-set -g @dracula-show-battery false
-set -g @dracula-show-network false
-set -g @dracula-show-time true
-set -g @dracula-show-fahrenheit false
-set -g @dracula-show-powerline true
-set -g @dracula-show-weather false
+#set -g @dracula-show-battery false
+#set -g @dracula-show-network false
+#set -g @dracula-show-time true
+#set -g @dracula-show-fahrenheit false
+#set -g @dracula-show-powerline true
+#set -g @dracula-show-weather false
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'dracula/tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
