--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,7 +83,10 @@ bind e setw synchronize-panes
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
+#set -g @plugin 'dracula/tmux'
+set -g @plugin 'jimeh/tmux-themepack'
+
+set -g @themepack 'powerline/block/cyan'
 
 # Dracula theme config
 #set -g @dracula-show-battery false
