--- a/.tmux.conf
+++ b/.tmux.conf
@@ -85,7 +85,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 #set -g @plugin 'dracula/tmux'
 set -g @plugin 'jimeh/tmux-themepack'
+#set -g @plugin 'wfxr/tmux-power'
 
+#set -g @tmux_power_theme 'snow'
 set -g @themepack 'powerline/block/cyan'
 
 # Dracula theme config
