--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,20 +83,9 @@ bind e setw synchronize-panes
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'dracula/tmux'
 set -g @plugin 'jimeh/tmux-themepack'
-#set -g @plugin 'wfxr/tmux-power'
-
-#set -g @tmux_power_theme 'snow'
-set -g @themepack 'powerline/block/cyan'
-
-# Dracula theme config
-#set -g @dracula-show-battery false
-#set -g @dracula-show-network false
-#set -g @dracula-show-time true
-#set -g @dracula-show-fahrenheit false
-#set -g @dracula-show-powerline true
-#set -g @dracula-show-weather false
+set -g @plugin 'wfxr/tmux-power'
+set -g @tmux_power_theme 'snow'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
